# checkers

./: .gitignore  CMakeLists.txt  geometry.cpp  geometry.hpp  main.cpp
gfx/: mesh2d.hpp  mesh_box.hpp
gfx/gl/: buffers.hpp  types.hpp
